# Orbital-Neural-Control-CPP

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  vcpkg.json
.github/workflows/: ci.yml  pages.yml
assets/mujoco/: cartpole.xml
backend/: CMakeLists.txt  README.md
backend/src/: main.cpp
backend/src/application/: job_service.cpp  job_service.h  mission_service.cpp  mission_service.h
backend/src/common/: run_id.cpp  run_id.h
backend/src/persistence/: database_config.cpp  database_config.h  experiment_store.h  postgres_store.cpp  postgres_store.h  sqlite_store.cpp
backend/src/persistence/migrations/: postgres_init.sql
backend/src/replay/: replay_service.cpp  replay_service.h
backend/src/transport/: http_server.cpp  json_serialization.cpp  json_serialization.h
cmake/: README.md
control/include/orbital/control/: lqr_controller.hpp  pid_controller.hpp
core/: CMakeLists.txt  README.md
core/benchmarks/: benchmark_control_baselines.cpp
core/include/orbital/: core_api.hpp  version.hpp
core/include/orbital/control/: control_command.hpp  reward_model.hpp
core/include/orbital/rl/: ppo_control_objective.hpp
core/include/orbital/simulation/: orbital_dynamics.hpp  orbital_state.hpp
core/src/: core_api.cpp
core/tests/: test_baselines.cpp  test_orbital_core.cpp
docker/: Dockerfile.backend  Dockerfile.cpp-dev  Dockerfile.frontend  Dockerfile.training  docker-compose.yml
docs/: FRONTIER_AI_FEED_2026-03-13.md  SECURITY.md  architecture.md  build.md  dependency-diagram.md  index.html  roadmap.md
docs/architecture/: artifact-contract.md  backend-api-flow.md  frontend-mission-control.md  inference-backends.md  overview.md  ppo-training-flow.md  runtime-device-selection.md
docs/demo/: learning_curve.csv  live_rollout.csv  neural_network_3d.html  neural_network_3d.json
docs/deployment/: security-notes.md
docs/openapi/: orbital-api.yaml
docs/performance/: latest-device-benchmark.md
docs/uml/: class-diagram.md  component-diagram.md  sequence-training.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/api/: mission-runtime.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/providers/: app-providers.tsx
frontend/src/components/mission/: mission-dashboard.tsx  orbit-scene.tsx  telemetry-charts.tsx
frontend/src/components/ui/: badge.tsx  card.tsx
frontend/src/entities/replay/model/: adapters.ts
frontend/src/entities/run/model/: types.ts
frontend/src/features/orbital-view/ui/: orbital-scene-canvas.tsx
frontend/src/features/replay-controls/ui/: replay-controls-panel.tsx
frontend/src/features/telemetry-inspection/ui/: telemetry-inspection-panel.tsx
frontend/src/hooks/: use-telemetry-stream.ts
frontend/src/pages/MissionReplayPage/: index.tsx
frontend/src/pages/RunExplorerPage/: index.tsx
frontend/src/shared/mock/: mission-replay.mock.ts
frontend/src/store/: mission-store.tsx
frontend/src/types/: telemetry.ts
frontend/src/widgets/MissionTopbar/ui/: mission-topbar.tsx
frontend/src/widgets/OrbitalCanvas/ui/: orbital-canvas-widget.tsx
inference/: README.md
k8s/: backend-deployment.yaml  backend-service.yaml  configmap.yaml  fastapi-deployment.yaml  fastapi-service.yaml  mlflow-deployment.yaml  mlflow-service.yaml  postgres-service.yaml  postgres-statefulset.yaml  secret.example.yaml
mlops/: README.md  export_policy_onnx.py  register_model.py  requirements.txt  run_training_mlflow.sh  start_mlflow.sh  train_with_mlflow.py
notebooks/: learning_curve.ipynb
physics/: README.md
rl/include/orbital/rl/: reproducibility.hpp  runtime_mode.hpp
scripts/: compare_devices.sh  compare_inference_backends.sh  full_demo_stack.sh  validate_artifacts.py
services/fastapi-serving/: Dockerfile
services/fastapi-serving/app/: __init__.py  main.py
services/fastapi-serving/tests/: test_api.py
sim/include/orbital/sim/: perturbation_model.hpp
src/: main.cpp
src/app/: training_app.cpp  training_app.h
src/application/: benchmark_runner.cpp  evaluation_runner.cpp  evaluation_runner.h  run_lifecycle.cpp  run_lifecycle.h  training_runner.cpp  training_runner.h
src/common/: determinism.cpp  determinism.h  run_id.cpp  run_id.h
src/domain/config/: config_validation.cpp  config_validation.h  experiment_config.cpp  experiment_config.h
src/domain/env/: environment_factory.cpp  environment_factory.h  orbital_6dof_env.cpp  point_mass_env.cpp  point_mass_env.h  point_mass_reward.h
src/domain/inference/: inference_backend_factory.cpp  inference_backend_factory.h  libtorch_policy_backend.cpp  libtorch_policy_backend.h  tensorrt_native_backend.cpp  tensorrt_policy_backend.cpp  tensorrt_policy_backend.h
src/domain/ppo/: gaussian_policy.cpp  gaussian_policy.h  policy_value_model.cpp  policy_value_model.h  rollout_buffer.cpp  rollout_buffer.h  trainer.cpp  trainer.h  value_network.cpp  value_network.h
src/domain/runtime/: device_resolver.cpp  device_resolver.h
src/env/: environment.h  environment_registry.cpp  environment_registry.h  mujoco_cartpole_env.cpp  mujoco_cartpole_env.h  point_mass_env.cpp  point_mass_env.h
src/infrastructure/artifacts/: artifact_layout.cpp  artifact_layout.h  checkpoint_manager.cpp  checkpoint_manager.h  run_manifest.cpp  run_manifest.h
src/infrastructure/persistence/: sqlite3_shim.h  sqlite_experiment_store.cpp  sqlite_experiment_store.h
src/interfaces/cli/: command_line.cpp  main.cpp
src/model/: ppo_agent.cpp  ppo_agent.h
src/train/: ppo_trainer.cpp  ppo_trainer.h  rollout_buffer.h
src/utils/: csv_logger.cpp  csv_logger.h  live_rollout_logger.cpp  live_rollout_logger.h  neural_3d_export.cpp  neural_3d_export.h
tools/: build_release.sh  plot_learning_curve.py  publish_demo.py  setup_libtorch.sh  setup_libtorch_cpu.sh  setup_vcpkg.sh  view_mujoco.sh
training/: evaluate_policy.py  requirements.txt  run_mission_rollout.py  train_ppo.py
training/bindings/: CMakeLists.txt  README.md  py_orbital_core.cpp
(+10 files in other folders)
